# synthetic-dataset-experimentation

./: README.md
training/: .gitignore  README.md  flake.nix  pyproject.toml
training/deploy/: smoke-test.yaml  train_job.yaml  train_job_vae.yaml
training/docs/: README.md  data.md  deploy.md  inference.md  latent.md  troubleshooting.md  vae.md
training/src/legacy/: ddpm.py
training/src/train/: latent_diffusion.py  sample.py  vae.py
training/src/train/data/: __init__.py  manifest.py
