[project.scripts]
train = "train.latent_diffusion:main"
train-latent = "train.latent_diffusion:main"
train-vae = "train.vae:main"
train-legacy-ddpm = "legacy.ddpm:main"
sample-latent = "train.sample:main"

[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "diffusers>=0.36.0",
    "lpips>=0.1.4",
    "packaging>=25.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
